--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="flex justify-between items-center p-6">
   <div
-    (click)="router.navigateByUrl('')"
+    (click)="router.navigateByUrl('app-home')"
     class="logo p-2 cursor-pointer flex items-center gap-x-2"
   >
     <img
