--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
 
+<div class="flex h-screen">
+  <app-sidebar></app-sidebar>
+  <div class="flex-1 p-6 bg-white-100 overflow-auto">
+    <router-outlet></router-outlet>
+  </div>
+</div>
