--- a/src/app/components/category/category-upsert/category-upsert.component.html
+++ b/src/app/components/category/category-upsert/category-upsert.component.html
@@ -8,8 +8,8 @@
     <form [formGroup]="categoryForm" class="flex flex-col gap-4">
       <div class="flex flex-col gap-2">
         <label for="name" class="text-sky-900 font-semibold"
-          >Category Name</label
-        >
+          >Category Name <span class="required-asterisk">*</span>
+        </label>
         <input
           id="name"
           formControlName="name"
@@ -35,8 +35,8 @@
 
       <div class="flex flex-col gap-2">
         <label for="description" class="text-sky-900 font-semibold"
-          >Description</label
-        >
+          >Description <span class="required-asterisk">*</span>
+        </label>
         <textarea
           id="description"
           formControlName="description"
