--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,12 @@
 <div
-  class="create-account-container flex p-6 w-full h-full justify-center items-center mt-0"
+  class="create-account-container flex p-6 w-full h-full justify-center items-center"
 >
-  <div class="container flex gap-x-2 h-fit mt-0">
+  <div class="container flex gap-8 h-fit">
     <div
       [formGroup]="accountForm"
-      class="left-section flex flex-col flex-1 gap-y-4 mt-0"
+      class="left-section flex flex-col flex-1 gap-y-4"
     >
-      <h1 class="text-[72px] font-bold">
+      <h1 class="font-bold">
         Take Control of <span class="text-customHsl-accent">Your Money</span>
       </h1>
       <p class="text-2xl">
