--- a/src/app/components/records/record-upsert/record-upsert.component.css
+++ b/src/app/components/records/record-upsert/record-upsert.component.css
@@ -34,3 +34,9 @@ label {
     background-color: #6c757d;
     cursor: not-allowed;
 }
+
+.required-asterisk {
+    color: red;
+    font-size: 0.9rem;
+    margin-left: 2px;
+}
