--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -60,7 +60,7 @@
   >
     <div class="flex justify-between items-center mb-2">
       <span class="text-xs uppercase text-gray-400">Balance</span>
-      <span class="text-green-400 font-semibold">$2,458.30</span>
+      <span class="text-green-400 font-semibold">Rs. 2,458.30</span>
     </div>
     <div class="w-full bg-gray-700 h-1.5 rounded-full overflow-hidden">
       <div class="bg-green-500 h-1.5 rounded-full" style="width: 65%"></div>
