--- a/src/app/components/category/category-upsert/category-upsert.component.css
+++ b/src/app/components/category/category-upsert/category-upsert.component.css
@@ -65,3 +65,26 @@ hover\:bg-gray-600:hover {
   font-size: 0.9rem;
   margin-left: 2px;
 }
+
+select,
+input,
+textarea {
+  margin: 8px 0;
+  padding: 8px;
+  width: 100%;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+th {
+  cursor: pointer;
+}
