--- a/src/app/components/category/category-upsert/category-upsert.component.html
+++ b/src/app/components/category/category-upsert/category-upsert.component.html
@@ -60,6 +60,22 @@
         </div>
       </div>
 
+      <div>
+        <label for="type">Category Type</label>
+        <select id="type" formControlName="type" required>
+          <option value="Income">Income</option>
+          <option value="Expense">Expense</option>
+        </select>
+        <div
+          *ngIf="
+            categoryForm.get('type')?.invalid &&
+            categoryForm.get('type')?.touched
+          "
+        >
+          Category type is required.
+        </div>
+      </div>
+
       <div class="flex justify-center gap-3">
         <button
           (click)="addCategory()"
