--- a/src/app/components/category/category-list/category-list.component.html
+++ b/src/app/components/category/category-list/category-list.component.html
@@ -30,8 +30,8 @@
     <label for="typeFilter">Filter by Type</label>
     <select id="typeFilter" (change)="filterByType($event)">
       <option value="All">All</option>
-      <option value="Income">Income</option>
-      <option value="Expense">Expense</option>
+      <option value="income">Income</option>
+      <option value="expense">Expense</option>
     </select>
   </div>
 
