--- a/src/app/components/category/category-upsert/category-upsert.component.html
+++ b/src/app/components/category/category-upsert/category-upsert.component.html
@@ -63,8 +63,8 @@
       <div>
         <label for="type">Category Type</label>
         <select id="type" formControlName="type" required>
-          <option value="Income">Income</option>
-          <option value="Expense">Expense</option>
+          <option value="income">Income</option>
+          <option value="expense">Expense</option>
         </select>
         <div
           *ngIf="
