--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -275,6 +275,34 @@
         <span class="text-xs text-gray-400">Settings & preferences</span>
       </div>
     </a>
+    <!-- Calender  -->
+    <a
+      routerLink="/calender"
+      routerLinkActive="bg-blue-600 text-white"
+      [routerLinkActiveOptions]="{ exact: false }"
+      class="flex items-center space-x-3 p-3 rounded-lg hover:bg-blue-700/70 group transition-all duration-200"
+      [ngClass]="{ 'justify-center px-2': isCollapsed }"
+      aria-label="Calender"
+    >
+      <svg
+        class="w-6 h-6 group-hover:text-blue-300 transition-colors"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
+        ></path>
+      </svg>
+      <div [ngClass]="{ hidden: isCollapsed }" class="flex flex-col">
+        <span class="font-medium">Calender</span>
+        <span class="text-xs text-gray-400">Timeline view</span>
+      </div>
+    </a>
 
     <!-- Settings -->
     <a
