--- a/src/app/components/accounts/accounts-upsert/accounts-upsert.component.html
+++ b/src/app/components/accounts/accounts-upsert/accounts-upsert.component.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col gap-2">
+      <!-- <div class="flex flex-col gap-2">
         <label for="initialAmount" class="text-sky-900 font-semibold"
           >Inital Amount <span class="required-asterisk">*</span>
         </label>
@@ -87,18 +87,18 @@
         >
           Initial Amount is required
         </div>
-      </div>
+      </div> -->
 
       <div class="flex flex-col gap-2">
         <label for="balance" class="text-sky-900 font-semibold"
-          >Balance<span class="required-asterisk">*</span>
+          >Initial Amount <span class="required-asterisk">*</span>
         </label>
         <input
           id="balance"
           formControlName="balance"
           type="number"
           (focus)="clearZero('balance')"
-          placeholder="Enter Account Balance"
+          placeholder="Enter Account Initial Amount"
           class="w-full p-3 border border-sky-200 rounded-md focus:outline-none focus:ring-2 focus:ring-sky-500 text-sky-900"
           [ngClass]="{
             'border-red-500':
@@ -113,7 +113,7 @@
           "
           class="text-red-500 text-sm"
         >
-          Balance is required
+          Initial Amount is required
         </div>
       </div>
 
