--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<!-- src/app/app.component.html -->
 <!-- <app-nav-bar></app-nav-bar> -->
-
+<!-- Keep commented if not used -->
 <div class="flex h-screen">
   <app-sidebar></app-sidebar>
   <div class="flex-1 p-6 bg-white-100 overflow-auto">
