--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -96,6 +96,7 @@
         <button class="text-gray-400 hover:text-gray-600">
           <i class="fas fa-expand-arrows-alt"></i>
         </button>
+        <button class="text-gray-400 hover:text-gray-600"></button>
         <button class="text-gray-400 hover:text-gray-600">
           <i class="fas fa-download"></i>
         </button>
